<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".ui.main.MainActivity">

        <!-- TODO (2 points): Convert to ConstraintLayout -->
        <!-- TODO (1 point): Address Android Studio warnings -->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/main_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/my_random_user"
                android:textAppearance="?textAppearanceHeadline4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/main_selected_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_title"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@id/main_title"
                app:layout_constraintStart_toStartOf="@id/main_title"
                app:layout_constraintTop_toBottomOf="@id/main_title">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/main_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="#33aaaaaa"
                        android:contentDescription="@string/content_description_user_thumbnail" />

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/main_name_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_name"
                            android:textAppearance="?textAppearanceBody2"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/main_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:textAppearance="?textAppearanceBody2"
                            tools:text="Jon" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/main_email_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_email"
                            android:textAppearance="?textAppearanceBody2"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/main_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:textAppearance="?textAppearanceBody2"
                            tools:text="robert@test.com" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/main_see_details_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/view_details" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/main_refresh_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_selected_card"
                android:text="@string/string_refresh_random_user"
                app:layout_constraintEnd_toEndOf="@id/main_title"
                app:layout_constraintStart_toStartOf="@id/main_title"
                app:layout_constraintTop_toBottomOf="@id/main_selected_card" />

            <View
                android:id="@+id/main_divider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#11111111"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_refresh_button" />

            <Button
                android:id="@+id/main_user_list_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/string_show_10_users"
                app:layout_constraintEnd_toEndOf="@id/main_title"
                app:layout_constraintStart_toStartOf="@id/main_title"
                app:layout_constraintTop_toBottomOf="@id/main_divider" />

            <!-- TODO (5 points): Convert to RecyclerView -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_user_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_user_list_button"
                tools:itemCount="15"
                tools:listitem="@layout/item_layout" />
            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>
